<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="dismiss_overlay_button_label">Quit</string>
    <string name="alarm_sound_default">Default alarm sound</string>
    <string name="back_button_label">Back</string>
    <string name="capital_off">Off</string>
    <string name="capital_on">On</string>
    <string name="date_picker_dialog_title">Date</string>
    <string name="next_button_label">Next</string>
    <string name="notification_sound_default">Default notification sound</string>
    <string name="ringtone_default">Default ringtone</string>
    <string name="ringtone_picker_title">Ringtones</string>
    <string name="ringtone_silent">None</string>
    <string name="ringtone_unknown">Unknown ringtone</string>
    <string name="skip_button_label">Skip</string>
    <string name="time_picker_dialog_title">Time</string>
    <string name="app_name">微信轻聊版</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="bad_net_notice">网络连接不可用</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="change_account">切换账户</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="content_1">本应用比较消耗电量和流量</string>
    <string name="content_2">退出请在通知中点击[退出登录]</string>
    <string name="content_3">* 长时间未连网会自动登出</string>
    <string name="content_4">* 消息会有一定的延迟</string>
    <string name="content_plus_1">请使用微信扫描二维码</string>
    <string name="content_plus_2">请手机微信上确认登录</string>
    <string name="content_title">－须知－</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="internet_permission_denied">移动网络不可用，请检查相关权限</string>
    <string name="internet_permission_rationale">移动网络不可用，需开启移动网络权限</string>
    <string name="menu_settings">Settings</string>
    <string name="net_error_notice">未知网络错误，请退出重试</string>
    <string name="notification_bad_net_notice">消息同步进程（网络连接不可用）</string>
    <string name="notification_internet_permission_denied">消息同步进程（移动网络不可用，请检查相关权限）</string>
    <string name="notification_internet_permission_rationale">消息同步进程（移动网络不可用，需开启移动网络权限）</string>
    <string name="notification_normal">消息同步进程</string>
    <string name="notification_using_mobile_data">消息同步进程（正在使用移动网络）</string>
    <string name="num_1">1.</string>
    <string name="num_2">2.</string>
    <string name="tic.svg.btn.check.on">M36.23,49.27L50,63L71.98,41.02</string>
    <string name="tic.svg.btn.enter">M46.73,66.95l14.01,-14.35l-14.01,-14.71</string>
    <string name="tic.svg.btn.radio.on">M52,52m-19,0a19,19 0,1 1,38 0a19,19 0,1 1,-38 0</string>
    <string name="tic.svg.btn.switch.off">M52,52m-16,0a16,16 0,1 1,32 0a16,16 0,1 1,-32 0</string>
    <string name="tic.svg.btn.switch.on">M48,36h8v32h-8z</string>
    <string name="tic.svg.btn.two_state.bg">M52,52m-52,0a52,52 0,1 1,104 0a52,52 0,1 1,-104 0</string>
    <string name="tic.svg.btn.two_state.half_bg">M52,52m-26,0a26,26 0,1 1, 52 0a26,26 0,1 1, -52 0</string>
    <string name="tic.svg.btn.two_state.zero_bg">M52,52m-0 ,0a0 , 0 0,1 1, 0 0a0 , 0 0,1 1, -0 0</string>
    <string name="tic_appbar_scrolling_view_behavior">ticwear.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="tic_font_family_body_1_ticwear">sans-serif</string>
    <string name="tic_font_family_body_2_ticwear">sans-serif-medium</string>
    <string name="tic_font_family_button_ticwear">sans-serif-medium</string>
    <string name="tic_font_family_caption_ticwear">sans-serif</string>
    <string name="tic_font_family_headline_ticwear">sans-serif</string>
    <string name="tic_font_family_menu_ticwear">sans-serif</string>
    <string name="tic_font_family_subhead_ticwear">sans-serif</string>
    <string name="tic_font_family_ticwear">sans-serif</string>
    <string name="tic_font_family_title_ticwear">sans-serif-medium</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="unknown_host_notice">网络出错，请断开手机和手表的蓝牙连接后重连</string>
    <string name="using_mobile_data">正在使用移动网络</string>
    <string name="waiting_notice">正在加载</string>
</resources>
