<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
            <TextView android:textSize="@dimen/title_size" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/content_title" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/content_margin_title">
                <TextView android:textSize="@dimen/content_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/num_1" />
                <TextView android:textSize="@dimen/content_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/content_margin_left" android:text="@string/content_1" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/content_margin_top">
                <TextView android:textSize="@dimen/content_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/num_2" />
                <TextView android:textSize="@dimen/content_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/content_margin_left" android:text="@string/content_2" />
            </LinearLayout>
            <TextView android:textSize="@dimen/content_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/content_margin_top" android:text="@string/content_3" />
            <TextView android:textSize="@dimen/content_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/content_margin_top" android:text="@string/content_4" />
            <TextView android:textSize="@dimen/content_size" android:textColorLink="@color/colorPrimary" android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/content_margin_top" android:text="@string/content_plus_1" />
            <TextView android:textSize="@dimen/content_size" android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/content_margin_left" android:text="▼" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>