<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" preference:tic_layout_removeBorders="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:preference="http://schemas.android.com/apk/res-auto">
    <include android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0" layout="@layout/preference_fragment_list_layout" />
    <TextView android:gravity="center" android:id="@android:id/empty" android:padding="@dimen/preference_fragment_padding_side_ticwear" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <RelativeLayout android:id="@id/button_bar" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <Button android:id="@id/back_button" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/back_button_label" android:layout_alignParentStart="true" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentEnd="true">
            <Button android:id="@id/skip_button" android:visibility="gone" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/skip_button_label" />
            <Button android:id="@id/next_button" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/next_button_label" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>